fix show controls and fix randomPostion and fix gap controls

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,7 +1,7 @@
 @import '../mixins/mixin-media.scss';
 
 :root {
-	--max-width: 1440px;
+	--max-width: 1920px;
 	--bg-color: #1e1e1e;
 	--bg-drag-color: #2a2a2a;
 	--text-color: #ffffff;
