--- a/src/components/slider/Slider.module.scss
+++ b/src/components/slider/Slider.module.scss
@@ -11,10 +11,9 @@
 	.first {
 		display: none;
 	}
+
 	@include respond-to(xl) {
 		top: 20px;
-	}
-	@include respond-to(xl) {
 		.first {
 			display: inline-block;
 		}
