--- a/src/components/videoPlayer/VideoPlayer.module.scss
+++ b/src/components/videoPlayer/VideoPlayer.module.scss
@@ -42,7 +42,7 @@
 		border: none;
 	}
 	@include respond-to(xl) {
-		gap: 25px;
+		// gap: 25px;
 		padding: 0px 42px;
 		height: 20px;
 		bottom: 30px;
